* Fixed: Improved performance for Preview Units/Pages/Modules.
* Fixed: Input elements cannot be submitted when "Previewing" a Unit. It will display "Preview only".
* Fixed: New implementation of CoursePress editor now allows dynamic editors including Visual/HTML toggles.

= 1.2.6.0 =
* Fixed completion system synchronization.
* Fixed discussion display in CoursePress theme.
* Fixed menu metabox to show all published courses.
* Fixed JavaScript conflict with sign up window.
* Fixed unordered lists in CoursePress theme.
* Fixed 1 showing when resubmitting answers.
* Fixed issues where virtual pages didn't work on some sub directory installs.
* Fixed resubmit limitations not working for some answers.
* Changed Users can now resubmit answers for file uploads and text boxes while grades are pending.
* Fixed uppercase usernames now supported by popup.
* Fixed possible compatibility issue with themes and page titles.

= 1.2.5.9 =
* Fix WP 4.3 compatibility issue with visual editors

= 1.2.5.8 =
* Fixed issues with WooCommerce sale price
* Added check for course category specific templates (i.e. archive-course-categoryslug.php)

= 1.2.5.7 =
* Fixed fatal error with single site setups

= 1.2.5.6 =
* Fixed redirection issue with multisite installations.

= 1.2.5.5 =
* Fixed issues with assessment, students and instructors tables being empty after WordPress 4.2 update.
* Fixed error message when submitting mandatory quiz items.
* Fixed error on setting a course category when first created.
* Fixed HTML showing on discussion page.
* Fixed Instructor capabilities not always saving.
* Improved handling of Virtual Pages and Custom Pages for CoursePress settings.


= 1.2.5.4 =
* Fixed issue with marking a order as paid with Manual Payments
* Fixed issue with Virtual pages
* Added additional hooks for developers
* Integration with WooCommerce (CoursePress > Settings > WooCommerce Integration)

= 1.2.5.3 =
* Security Update: Fixed possible WordPress XSS bug
* Fixed clearfix div