@@ -14,6 +14,7 @@ CHANGE LOG
 * Fixed: Improved performance for Preview Units/Pages/Modules.
 * Fixed: Input elements cannot be submitted when "Previewing" a Unit. It will display "Preview only".
 * Fixed: New implementation of CoursePress editor now allows dynamic editors including Visual/HTML toggles.
+* Fixed: Certificates correctly uses the selected 'Reports' font as set in settings.
 
 = 1.2.6.0 =
 * Fixed completion system synchronization.
